--- a/snake/index.html
+++ b/snake/index.html
@@ -15,13 +15,15 @@
             <span class="high-score">High score : 0</span>
         </div>
         <div class="play-board"></div>
-        <div class="controls">
-            <i data-key="ArrowLeft" class="fa-solid fa-arrow-left"></i>
+    </div>
+    <div class="controls">
+        <i data-key="ArrowLeft" class="fa-solid fa-arrow-left left"></i>
+        <div class="up-down">
             <i data-key="ArrowUp" class="fa-solid fa-arrow-up"></i>
-            <i data-key="ArrowRight" class="fa-solid fa-arrow-right"></i>
             <i data-key="ArrowDown" class="fa-solid fa-arrow-down"></i>
         </div>
+        <i data-key="ArrowRight" class="fa-solid fa-arrow-right right"></i>
     </div>
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
