--- a/web/counter/page.html
+++ b/web/counter/page.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="value" id="value">value = 0</div>
-    <button class="moins" onclick="moins()">-</button> 
-    <button class="plus" onclick="plus()">+</button>
+    <div class="value" id="value">value : 0</div>
+    <div class="button">
+        <button class="moins" onclick="moins()">-</button> 
+        <button class="plus" onclick="plus()">+</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
