--- a/web/list/page.html
+++ b/web/list/page.html
@@ -12,8 +12,10 @@
     <div class="list">
         <ul id="number-list"></ul>
     </div>
-    <button class="add" onclick="add()">Ajouter</button>
-    <button class="remove" onclick="remove()">Supprimer</button>
+    <div class="buttons">
+        <button class="add" onclick="add()">Ajouter</button>
+        <button class="remove" onclick="remove()">Supprimer</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
